[package]
name = "zip_archive"
description = "A library selecting 7z executable that are depending on the operating system, and run it with multithread."
author = ["Kim tae hyeon <kimth0734@gmail.com>"]
license = "MIT"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/altair823/zip_archive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
crossbeam-queue = "0.3.5"
image_compressor = "1.1.0"
