[package]
name = "zip_archive"
description = "Library that archive a directory with a specific compression format."
author = ["Kim tae hyeon <kimth0734@gmail.com>"]
license = "MIT"
version = "1.2.2"
edition = "2021"
repository = "https://github.com/altair823/zip_archive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
crossbeam-queue = "0.3.5"
xz2 = "0.1.6"
tar = "0.4.38"
zip = "0.6.2"

[dev-dependencies]
fs_extra = "1.2.0"
function_name = "0.2.0"